--- a/views/bookDetails.ejs
+++ b/views/bookDetails.ejs
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <%- include("header") %>
-  <body>
+  <%- include("head") %>
+  <%- include("fouc") %>
+  <body class="no_js" style="opacity: 0">
     <%- include("navbar") %>
 
     <h1 class="headerTitle"><%= book.title %></h1>
     <div class="detailsSheet">
-      <img src="<%= book.thumbnail %>" alt="thumbnail" />
+      <img src="<%= book.thumbnail %>" alt="no cover" />
 
       <div class="detailsPanel">
-        <span>By: <%= book.authors %></span>
-        <span>Publisher: <%= book.publisher %></span>
-        <span><%= book.pageCount %> pages</span>
-        <span>Language: <%= book.language %></span> 
+        <span><%= book.subtitle || "(no subtitle info)" %></span>
+        <span>By <%= book.authors || "(no author info)" %></span>
+        <span>Publisher: <%= book.publisher || "(no publisher info)" %></span>
+        <span><%= book.pageCount + " pages" || "(no length info)" %></span>
+        <span>Language: <%= book.language || "(no language info)" %></span> 
       </div>
     </div>
+
+    <form method="POST" class="userStats">
+      <label for="readingStart">Start/End: 
+        <input name="readingStart" type="date" value="<%= book.readingStart || "" %>" />
+        <input name="readingEnd" type="date" value="<%= book.readingEnd || "" %>" />
+      </label>
+
+      <span class="totalReadTime">Reading interval: <%= book.readTime || "0" %> days</span>
+      <span class="pagesPerDay">
+        <%= book.pageCount ? ((book.pageCount/book.readTime) || 0).toFixed(1) : "?" %> pages/day
+      </span>
+
+      <button class="defaultButton" type="submit">Update</button>
+    </form>
   </body>
 </html>
